--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "streaming_site",
-  "version": "1.0.0",
-  "description": "Backend for streaming website",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon src/index.js"
-  },
-  "keywords": [
-    "javascript",
-    "backend",
-    "node"
-  ],
-  "author": "Awanish Singh",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.0.2",
-    "prettier": "^3.1.1"
-  }
+    "name": "streaming_site",
+    "version": "1.0.0",
+    "description": "Backend for streaming website",
+    "type": "module",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
+    },
+    "keywords": [
+        "javascript",
+        "backend",
+        "node"
+    ],
+    "author": "Awanish Singh",
+    "license": "ISC",
+    "devDependencies": {
+        "nodemon": "^3.0.2",
+        "prettier": "^3.1.1"
+    },
+    "dependencies": {
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "mongoose": "^8.0.4"
+    }
 }
